--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kbc",
+  "name": "nagamochi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -22,7 +22,7 @@
     "gulp-imagemin": "^3.3.0",
     "gulp-real-favicon": "^0.2.2",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.0",
     "gulp.spritesmith": "^6.5.1",
     "imagemin-pngquant": "^5.0.1",
