--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-cache": "^0.4.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.1",
+    "gulp-ext-replace": "^0.3.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-real-favicon": "^0.2.2",
     "gulp-rename": "^1.2.2",
@@ -26,6 +27,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp.spritesmith": "^6.5.1",
     "imagemin-pngquant": "^5.0.1",
+    "imagemin-webp": "^5.1.0",
     "pump": "^1.0.2"
   },
   "dependencies": {
